# FORGE

./: APACHE_LICENSE  CLAUDE.md  README.md  REQUIREMENTS.md  pyproject.toml
.claude/: settings.json
config/: default.yaml
forge/: __init__.py  __main__.py  cli.py
forge/data/: loader.py  schema.py
forge/loop/: phase0_init.py  phase1_reward.py  phase2_surrogate.py  phase3_propose.py  phase4_evaluate.py  status.py
forge/models/: base.py  reward_model.py  surrogate_model.py
forge/optimization/: acquisition.py  optimizer.py
forge/utils/: config.py
models/: reward_model.pkl
tests/: conftest.py  generate_fixtures.py  test_acquisition.py  test_reward_model.py  test_surrogate_model.py
tests/fixtures/: sample_data.csv
